[package]
name = "nitscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.16.0"
reqwest = "0.11.18"
lazy_static = "1.4.0"
html-escape = "0.2.13"
futures = "0.3.28"
chrono = "0.4.26"
csv = "1.2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false