[package]
name = "nitscrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.16.0"
reqwest = { version = "0.11.18", features = ["socks"] }
lazy_static = "1.4.0"
html-escape = "0.2.13"
futures = "0.3.28"
chrono = { version = "0.4.26", features = ["serde"] }
csv = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
lingua="1.5.0"
tokio-util = "0.7.8"
atomic_float = "0.1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"